k8s_configs/bind9-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bind9-service
  labels:
    app: bind9
  namespace: default
spec:
  selector:
    app: bind9
  ports:
  - protocol: TCP
    port: 5353
    targetPort: 53
    name: bind9-tcp
  - protocol: UDP
    port: 5353
    targetPort: 53
    name: bind9-udp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bind9-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bind9
  template:
    metadata:
      labels:
        app: bind9
    spec:
      containers:
      - name: bind9
        image: ubuntu/bind9:9.18-22.04_beta
        ports:
        - containerPort: 53
          protocol: TCP
        - containerPort: 53
          protocol: UDP
